Closed
Bug 870575
Opened 12 years ago
Closed 12 years ago
Upgrade psutil
Categories
(Firefox Build System :: General, defect)
Firefox Build System
General
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla23
People
(Reporter: gps, Assigned: gps)
References
Details
In-tree psutil is at 0.6.1. There are some bug fixes worth having in later versions (like proper OS X I/O counters). Let's upgrade to 0.7.1 - the latest available release.
| Assignee | ||
Comment 1•12 years ago
|
||
https://hg.mozilla.org/projects/build-system/rev/326950106851
I found a use for build-system! rs=me since this is just upstream merging.
Status: NEW → ASSIGNED
Whiteboard: [fixed-in-build-system]
| Assignee | ||
Comment 2•12 years ago
|
||
Assignee: nobody → gps
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Whiteboard: [fixed-in-build-system]
Target Milestone: --- → mozilla23
Comment 3•12 years ago
|
||
NotImplementedError: platform openbsd5 is not supported
File "/src/mozilla-central/python/mozbuild/mozbuild/mach_commands.py", line 263, in build
from mozbuild.controller.building import BuildMonitor
File "/src/mozilla-central/python/mozbuild/mozbuild/controller/building.py", line 15, in <module>
import psutil
File "/src/mozilla-central/python/psutil/psutil/__init__.py", line 92, in <module>
raise NotImplementedError('platform %s is not supported' % sys.platform)
Not nice psutil......
Updated•8 years ago
|
Product: Core → Firefox Build System
You need to log in
before you can comment on or make changes to this bug.
Description
•