Bug 870575 - Upgrade psutil to 0.7.1; rs=me

Archive obtained from
https://psutil.googlecode.com/files/psutil-0.7.1.tar.gz and checked in
with no modifications.