python/psutil/psutil/_psutil_posix.h
@@ -1,6 +1,4 @@
 /*
- * $Id: _psutil_posix.h 1223 2011-11-09 23:47:55Z g.rodola $
- *
  * Copyright (c) 2009, Jay Loden, Giampaolo Rodola'. All rights reserved.
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file.
