python/psutil/examples/iotop.py
@@ -1,7 +1,5 @@
 #!/usr/bin/env python
-#
-# $Id: iotop.py 1236 2011-12-13 19:00:35Z g.rodola $
-#
+
 # Copyright (c) 2009, Jay Loden, Giampaolo Rodola'. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
