python/psutil/examples/pmap.py
@@ -1,7 +1,5 @@
 #!/usr/bin/env python
-#
-# $Id: pmap.py 1420 2012-07-08 12:12:01Z g.rodola $
-#
+
 # Copyright (c) 2009, Jay Loden, Giampaolo Rodola'. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
