python/psutil/test/_bsd.py
@@ -1,7 +1,5 @@
 #!/usr/bin/env python
-#
-# $Id: _bsd.py 1498 2012-07-24 21:41:28Z g.rodola $
-#
+
 # Copyright (c) 2009, Jay Loden, Giampaolo Rodola'. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
